--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </ul>  
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
-                <h1 class="header-title">John Doe</h1>
-                <h6 class="header-mono" >Frond end Designer | Developer</h6>
+                <h1 class="header-title">Justine Bautista</h1>
+                <h6 class="header-mono" >Back end Developer | Aspiring Software Engineer</h6>
                 <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button>
             </div>
         </div>
@@ -50,8 +50,8 @@
                 <ul class="navbar-nav brand">
                     <img src="assets/imgs/avatar.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
-                        <h5 class="brand-title">John Doe</h5>
-                        <div class="brand-subtitle">Web Designer | Developer</div>
+                        <h5 class="brand-title">Justine Lloyd Bautista</h5>
+                        <div class="brand-subtitle">Back end Developer | Aspiring Software Engineer</div>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
@@ -73,19 +73,23 @@
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
-                <h5 class="mb-3">A Web Designer / Developer Located In Our Lovely Earth</h5>
-                <p class="mt-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit.sit amet, Qui deserunt consequatur fugit repellendusillo voluptas?</p>
+                <h5 class="mb-3">Back end Developer / Aspiring Software Engineer Studying at Polytechnic University of the Philippines</h5>
+                <p class="mt-20">"As an aspiring software engineer, I am constantly reminded of the infinite possibilities that lie ahead. Life is a journey a
+                    nd being a software engineer means being part of a community that is constantly pushing the boundaries of what is possible. I am excited to be
+                     embarking on this journey and to learn, grow and make a difference through the power of technology. It's not just about the lines of code we write,
+                      but the way we approach problems, work with others, and strive for excellence that truly sets us apart. I am ready to take on the challenges and 
+                      opportunities that this field has to offer, and to make my own mark in the world of software engineering."</p>
                 <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
                 <span class="line mb-5"></span>
                 <ul class="mt40 info list-unstyled">
-                    <li><span>Birthdate</span> : 09/13/1996</li>
-                    <li><span>Email</span> : info@website.com</li>
-                    <li><span>Phone</span> : + (123) 456-7890</li>
-                    <li><span>Skype</span> : John_Doe </li>
-                    <li><span>Address</span> :  12345 Fake ST NoWhere AB Country.</li>
+                    <li><span>Birthdate</span> : 07/15/2000</li>
+                    <li><span>Email</span> : justmebautista@gmail.com</li>
+                    <li><span>Phone</span> : + (63) 9365354125</li>
+                    <li><span>Skype</span> : Justine_Bautista </li>
+                    <li><span>Address</span> :  Manila, Philippines</li>
                 </ul>
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li>
@@ -101,24 +105,25 @@
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-widget icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>UX Design</h6>
-                        <p class="subtitle"> exercitat Repellendus,  corrupt.</p>
+                        <h6>Graphics Designing</h6>
+                        <p class="subtitle">Digital art and graphics within my imagination.</p>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-paint-bucket icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Web Development</h6>
-                        <p class="subtitle">Lorem ipsum dolor sit consectetur.</p>
+                        <h6>Software Develpment/ Engineering</h6>
+                        <p class="subtitle">Designing, creating, testing, and maintaining software using a systematic and repeatable approach.</p>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-stats-up icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Digital Marketing</h6>
-                        <p class="subtitle">voluptate commodi illo voluptatib.</p>
+                        <h6>Data Analytics</h6>
+                        <p class="subtitle"> Examining, cleaning, transforming, and modeling data with the goal
+                             of discovering useful information, informing conclusions, and supporting decision-making.</p>
                         <hr>
                     </div>
                 </div>
@@ -140,17 +145,19 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">2017 - Present</h6>
-                            <P>UX Developer</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <h6 class="title text-danger">2022 - Present</h6>
+                            <P>Freelance Graphics Artist</P>
+                            <P class="subtitle">Freelance graphic design involves creating visual concepts, using computer software or by hand, to communicate ideas that inspire, inform, 
+                                or captivate consumers. It is typically done on a project or contract basis by self-employed individuals.</P>
                             <hr>
-                            <h6 class="title text-danger">2016 - 2017</h6>
-                            <P>Front-end Developer</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
-                            <hr>
+                            <h6 class="title text-danger">2020 - 2021</h6>
+                            <P>Assistant Software Developer</P>
+                            <P class="subtitle">Hired by APC College of Computing and Engineering. Checking and debugging system database and codes.</P>
+                            
+                            <!-- <hr>
                             <h6 class="title text-danger">2015 - 2016</h6>
-                            <P>UX Designer</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <P></P>
+                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P> -->
                         </div>
                     </div>
                 </div>
@@ -164,8 +171,9 @@
                         </div>
                         <div class="card-body">
                             <h6 class="title text-danger">2017 - Present</h6>
-                            <P>B.E Computer Engineering</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error corrupti recusandae obcaecati odit repellat ducimus cum, minus tempora aperiam at.</P>
+                            <P>B.S Information Technology</P>
+                            <P class="subtitle">Design, development, implementation, and management of information technology systems. 
+                                It covers a wide range of topics including programming, database management, networking, and cybersecurity</P>
                             <hr>
                             <h6 class="title text-danger">2016 - 2017</h6>
                             <P>Diploma in Computer Engineering</P>
