--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with JohnDoe landing page.">
     <meta name="author" content="Devcrud">
+    <link rel="icon" type="image/png" href="assets\imgs\android-chrome-512x512.png">
     <title>Personal Profile</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -310,8 +311,14 @@
                             <i class="ti-vector text-danger" aria-hidden="true"></i>
                         </div>
                         <div class="card-body px-4 py-3">
-                            <h5 class="mb-3 card-title text-dark">Ullam</h5>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam commodi provident, dolores reiciendis enim pariatur error optio, tempora ex, nihil nesciunt! In praesentium sunt commodi, unde ipsam ex veritatis laboriosam dolor asperiores suscipit blanditiis, dignissimos quos nesciunt nulla aperiam officia.</P>
+                            <h5 class="mb-3 card-title text-dark">Photo Editing</h5>
+                            <P class="subtitle">Photo editing is the process of manipulating and enhancing digital images to improve their 
+                                overall look and feel. The process can involve adjusting the image's color balance, brightness and contrast, 
+                                cropping, and removing unwanted objects. It also can include adding special effects, such as filters and text,
+                                to create a specific mood or style. There are many different software programs available for photo editing, such 
+                                as Adobe Photoshop and Lightroom, that offer a wide range of features and tools for beginners and advanced users 
+                                alike. Photo editing is used in many different fields, such as advertising, journalism,
+                                 and fine art. It can also be used to enhance personal photos for social media and other personal uses.</P>
                         </div>
                     </div>
                 </div>
@@ -321,7 +328,7 @@
                             <i class="ti-write text-danger" aria-hidden="true"></i>
                         </div>
                         <div class="card-body px-4 py-3">
-                            <h5 class="mb-3 card-title text-dark">Asperiores</h5>
+                            <h5 class="mb-3 card-title text-dark">System Program Building</h5>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam commodi provident, dolores reiciendis enim pariatur error optio, tempora ex, nihil nesciunt! In praesentium sunt commodi, unde ipsam ex veritatis laboriosam dolor asperiores suscipit blanditiis, dignissimos quos nesciunt nulla aperiam officia.</P>
                         </div>
                     </div>
@@ -374,7 +381,7 @@
         </div>
     </section>
 
-    <section class="section bg-custom-gray" id="price">
+    <!-- <section class="section bg-custom-gray" id="price">
         <div class="container">
             <h1 class="mb-5"><span class="text-danger">Packs</span> Pricing</h1>
             <div class="row align-items-center">
@@ -448,7 +455,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <section class="section bg-dark py-5">
         <div class="container text-center">
             <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2>
