--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with JohnDoe landing page.">
+    <meta name="description" content="Creating things beyond reality.">
     <meta name="author" content="Devcrud">
     <link rel="icon" type="image/png" href="assets\imgs\android-chrome-512x512.png">
     <title>Personal Profile</title>
