--- a/index.html
+++ b/index.html
@@ -783,8 +783,8 @@
     </div> -->
     <footer class="footer py-3">
         <div class="container">
-            <p class="small mb-0 text-light">
-                &copy; <script>document.write(new Date().getFullYear())</script> Created By <span class="text-danger" title="Bootstrap 4 Themes and Dashboards">Justine Bautista</span></a>  from Polytechnic University of the Philippines
+            <p class="small mb-0 text-light" align="center">
+                &copy; <script align="center">document.write(new Date().getFullYear())</script> Created By <span class="text-danger" align="center"title="Bootstrap 4 Themes and Dashboards" align="center">Justine Bautista </span></a>  from Polytechnic University of the Philippines.   <span class="text-danger" title="Bootstrap 4 Themes and Dashboards">For educational purposes.</span></a>                             
             </p>
         </div>
     </footer>
