--- a/index.html
+++ b/index.html
@@ -342,7 +342,13 @@
                         </div>
                         <div class="card-body px-4 py-3">
                             <h5 class="mb-3 card-title text-dark">Video Editing</h5>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam commodi provident, dolores reiciendis enim pariatur error optio, tempora ex, nihil nesciunt! In praesentium sunt commodi, unde ipsam ex veritatis laboriosam dolor asperiores suscipit blanditiis, dignissimos quos nesciunt nulla aperiam officia.</P>
+                            <P class="subtitle">As a video editor, my role is to manipulate and rearrange video shots to create a new work. I import video footage, cut, trim and splice shots together, as well as add visual effects, transitions and audio to tell a story or convey a message. I use video editing software such as Adobe Premiere, Final Cut Pro, and Avid Media Composer to achieve this.
+
+                                I have a good eye for visual storytelling and the ability to think creatively, which allows me to create engaging and compelling videos. I also have strong technical skills and am proficient in using the software and equipment I work with. I am able to work well under pressure and meet tight deadlines.
+                                
+                                I understand the technical aspects of video production such as color correction, audio mixing, and exporting. My knowledge of pacing, composition, and visual storytelling enables me to create videos that are not only technically sound, but also emotionally impactful.
+                                
+                                I am constantly looking for ways to improve my skills and stay current with the latest trends and technologies in the video editing industry. I take pride in delivering high-quality videos that meet the client's expectations.</P>
                         </div>
                     </div>
                 </div>
