--- a/index.html
+++ b/index.html
@@ -478,16 +478,16 @@
             <div class="portfolio">
                 <div class="filters">
                     <a href="#" data-filter=".new" class="active">
-                        New
+                        Recent
                     </a>
                     <a href="#" data-filter=".advertising">
-                        Advertising
+                        Months
                     </a>
                     <a href="#" data-filter=".branding">
-                        Branding
+                        Years
                     </a>
                     <a href="#" data-filter=".web">
-                        Web
+                        Ongoing
                     </a>
                 </div>
                 <div class="portfolio-container"> 
@@ -497,8 +497,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-1.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">PROGRAMMING</h6>
+                                    <p class="subtitle">Research program bulding and maintenance</p>
                                 </div>
                             </div>   
                         </div>             
@@ -509,8 +509,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-2.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">VIDEOGRAPHY</h6>
+                                    <p class="subtitle">Client video request edit</p>
                                 </div>
                             </div> 
                         </div>                         
@@ -521,8 +521,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/advertising-2.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">ADVERSTISING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Research web building</p>
                                 </div>
                             </div>    
                         </div>              
@@ -534,7 +534,7 @@
                                 <a class="img-popup" href="assets/imgs/web-4.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">Research web building</p>
                                 </div>
                             </div>
                         </div>                                                     
@@ -546,8 +546,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/advertising-1.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">ADVERSITING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">PROGRAMMING</h6>
+                                    <p class="subtitle">Research program bulding and maintenance</p>
                                 </div>
                             </div>
                         </div>                                                       
@@ -559,7 +559,7 @@
                                 <a class="img-popup" href="assets/imgs/web-3.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">Research web building</p>
                                 </div>
                             </div>
                         </div>                                                     
@@ -570,8 +570,8 @@
                            <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/advertising-3.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">ADVERSITING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">PROGRAMMING</h6>
+                                    <p class="subtitle">Research program bulding and maintenance</p>
                                 </div>
                             </div>
                         </div>                                                       
@@ -582,8 +582,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/advertising-4.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">ADVERTISING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">PROGRAMMING</h6>
+                                    <p class="subtitle">Research program bulding and maintenance</p>
                                 </div>
                             </div>
                         </div>
@@ -595,8 +595,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-1.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">BRANDING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">VIDEOGRAPHY</h6>
+                                    <p class="subtitle">Client video request edit</p>
                                 </div>
                             </div> 
                         </div>
@@ -607,8 +607,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-2.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">BRANDING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">VIDEOGRAPHY</h6>
+                                    <p class="subtitle">Client video request edit</p>
                                 </div>
                             </div>
                         </div>                                                     
@@ -619,8 +619,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-3.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">BRANDING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">VIDEOGRAPHY</h6>
+                                    <p class="subtitle">Client video request edit</p>
                                 </div>
                             </div>
                         </div>                                                    
@@ -631,8 +631,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-4.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">BRANDING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">VIDEOGRAPHY</h6>
+                                    <p class="subtitle">Client video request edit</p>
                                 </div>
                             </div>
                         </div>                                                      
@@ -643,8 +643,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-5.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">BRANDING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Research web building</p>
                                 </div>
                             </div>
                         </div>                                                   
