--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                         <a href="#portfolio" class="nav-link">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#blog" class="nav-link">Blog</a>
+                        <a href="" class="nav-link"></a>
                     </li>
                     <li class="nav-item last-item">
-                        <a href="#contact" class="nav-link">Contact</a>
+                        <a href="#about" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </div>
