--- a/index.html
+++ b/index.html
@@ -464,10 +464,10 @@
             </div>
         </div>
     </section> -->
-    <section class="section bg-dark py-5">
+    <section class="section bg-dark py-4">
         <div class="container text-center">
-            <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2>
-            <button class="btn bg-primary w-lg" >Hire me</button>
+            <h2 class="text-light mb-3 font-weight-normal">Polytechnic University of the Philippines</h2>
+            <button class="btn bg-primary w-lg" ><h5 class="text-light font-weight-normal "align = "center">Follow us</h5></button>
         </div>
     </section>
 
