--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Creating things beyond reality.">
-    <meta name="author" content="Devcrud">
+    <meta name="author" content="Justine_Bautista">
     <link rel="icon" type="image/png" href="assets\imgs\android-chrome-512x512.png">
     <title>Personal Profile</title>
     <!-- font icons -->
