--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             <hr>
                             <h6 class="title text-danger">2015 - 2019</h6>
                             <P>High School Degree</P>
-                            <P class="subtitle">General Programming and Journalism Academic program at Manila Pasay West Manila.</P>
+                            <P class="subtitle">General Programming and Journalism Academic program at Manila Pasay West.</P>
                             
                         </div>
                     </div>
