--- a/index.html
+++ b/index.html
@@ -603,9 +603,9 @@
                     </div> 
                     <div class="col-md-6 col-lg-4 branding">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-2.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">  
+                            <img src="assets/imgs/branding-2.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">  
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/branding-2.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/branding-2.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">VIDEOGRAPHY</h6>
                                     <p class="subtitle">Client video request edit</p>
